--- a/landev/index.html
+++ b/landev/index.html
@@ -21,10 +21,10 @@
         </div>
         <nav>
             <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Servicios</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Nosotras</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">INICIO</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">SERVICIOS</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">NOSOTRAS</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">CONTACTO</a></li>
             </ul>
         </nav>
 
@@ -38,7 +38,7 @@
 
 
             <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Ctd6BTuZmjA?si=HalHNzCLQJTXziLS"
+                <iframe width="1350" height="600" src="https://www.youtube.com/embed/Ctd6BTuZmjA?si=HalHNzCLQJTXziLS"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
