ajustes en el video y el nav

--- a/landev/index.html
+++ b/landev/index.html
@@ -19,12 +19,12 @@
         <div class="logo">
             <img src="img/logo.png" alt="Logo" width="150">
         </div>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Servicios</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Nosotras</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
 
@@ -35,21 +35,16 @@
         <!--video============================-->
 
         <section class="video">
-
-
-            <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Ctd6BTuZmjA?si=HalHNzCLQJTXziLS"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="video-container">
+                <video autoplay muted loop>
+                    <source src="video/Inicio.mp4" type="video/mp4">
+                    Tu navegador no soporta videos.
+                </video>
+                <div class="overlay">
+                    <h2>Somos una empresa de consultoría de diseño y marketing digital</h2> 
+                    <button href="#contacto" class="btn">Conoce más</button>
+                </div>
             </div>
-
-
-
-
-
-            </div>
-            </div><br>
         </section>
 
         <section class="container text-center my-5">
