--- a/index.html
+++ b/index.html
@@ -20,19 +20,15 @@
             <img src="img/logo.png" alt="Logo" width="150">
         </div>
 
+         <!--menu============================-->
+
         <nav class="menu">
             <ul>
-<<<<<<< HEAD:index.html
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/servicios.html">Servicios</a></li>
                 <li><a href="/nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-=======
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
->>>>>>> 703e08511d40ece5956d12f621331a47c6fde1fc:landev/index.html
+
             </ul>
         </nav>
 
@@ -108,13 +104,16 @@
 
         <section class="container d-flex justify-content-between align-items-center my-5">
 
-            <h2 class="text-end">¿Quieres conocer el impacto de conectar mejor con tus clientes?</h2>
-            <div class="d-flex justify-content-between">
+           <div> 
+             <h2 class="textend">¿Quieres conocer el impacto de conectar mejor con tus clientes?</h2>
+             </div>
+             <button href="#servicios" class="ens">Explora nuestros servicios</button>
+             </div> 
 
         </section>
 
         <footer>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between - d-flex left">
                 <div>
                     <a href="#" class="text-black me-3"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="text-black me-3"><i class="fab fa-facebook"></i></a>
