--- a/contacto.html
+++ b/contacto.html
@@ -4,28 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Servicios</title>
+    <title>contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
     <header class="container d-flex justify-content-between align-items-center py-3">
         <div class="logo">
-            <img src="/img/logo.png" alt="Logo" width="150">
+            <img src="img/logo.png" alt="Logo" width="150">
         </div>
+
+         <!--menu============================-->
 
         <nav class="menu">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/servicios.html">Servicios</a></li>
-                <li><a href="/nosotros.html">Nosotros</a></li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+
             </ul>
         </nav>
 
     </header>
+    <!-- Sección principal con imagen de fondo -->
+    <div class="contact-section">
+        <div class="overlaycontacto">
+            <!-- Contenido atractivo a la derecha -->
+            <div class="content-right">
+                <h2>Transforma tu presencia digital</h2>
+                <p>Nos especializamos en crear experiencias únicas de marca. ¡Deja que tu empresa se destaque con diseño
+                    innovador y estrategias digitales efectivas!</p>
+                <button onclick="window.location.href='mailto:contacto@empresa.com'">¡Comienza hoy mismo!</button>
+            </div>
+            <!-- Formulario a la izquierda -->
+            <div class="form-container">
+                <h2>¿Tienes alguna consulta?</h2>
+                <p>¡Estamos aquí para ayudarte a crecer digitalmente!</p>
+                <form id="contact-form">
+                    <input type="text" id="name" placeholder="Tu nombre" required>
+                    <input type="email" id="email" placeholder="Tu correo" required>
+                    <textarea id="message" placeholder="Tu mensaje" required></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Nueva sección fuera del footer -->
+    <div class="cta-section">
+        <p>Conéctate con nosotros y comienza a crecer digitalmente</p>
+        <button onclick="window.location.href='mailto:contacto@empresa.com'">Enviar un correo</button>
+    </div>
+</body>
+
+</html>
