--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/servicios.html">Servicios</a></li>
-                <li><a href="/nosotros.html">Nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
 
             </ul>
