cambios css - footer - nosotros - franjas inicio

--- a/index.html
+++ b/index.html
@@ -54,33 +54,32 @@
         </section>
 
         <section class="container text-center my-5">
-            <h2>Servicios</h2>
+            <h2 class="title">Servicios</h2>
             <p>Conoce al equipo que hará posible la transformación de tu marca. Descubre nuestra historia, pasión y
                 enfoque en cada proyecto.</p>
             <button class="btn btn-primary">Ver más</button>
         </section>
 
-        <section class="container text-center my-5">
+        <section class="franja">           
             <h2>Clientes</h2>
-
-            <div class="slider-container bg-black m">
-                <div class="slider">
-                    <img src="img/marca1.png" alt="Marca 1">
-                    <img src="img/marca2.png" alt="Marca 2">
-                    <img src="img/marca3.png" alt="Marca 3">
-                    <img src="img/marca4.png" alt="Marca 4">
-                    <img src="img/marca5.png" alt="Marca 5">
-                    <img src="img/marca6.png" alt="Marca 6">
-                    <img src="img/marca7.png" alt="Marca 7">
-                    <img src="img/marca8.png" alt="Marca 8">
-                    <img src="img/marca9.png" alt="Marca 9">
-                    <img src="img/marca10.png" alt="Marca 10">
+                <div class="slider-container bg-black m">
+                    <div class="slider">
+                        <img src="img/marca1.png" alt="Marca 1">
+                        <img src="img/marca2.png" alt="Marca 2">
+                        <img src="img/marca3.png" alt="Marca 3">
+                        <img src="img/marca4.png" alt="Marca 4">
+                        <img src="img/marca5.png" alt="Marca 5">
+                        <img src="img/marca6.png" alt="Marca 6">
+                        <img src="img/marca7.png" alt="Marca 7">
+                        <img src="img/marca8.png" alt="Marca 8">
+                        <img src="img/marca9.png" alt="Marca 9">
+                        <img src="img/marca10.png" alt="Marca 10">  
+                    </div>
                 </div>
-            </div>
         </section>
 
         <section class="container text-center my-5">
-            <h2>Proyectos</h2>
+            <h2 class="title">Proyectos</h2>
 
             <div class="carousel-container">
                 <button class="arrow left-arrow" onclick="moveSlide(-1)">&#10094;</button>
@@ -102,25 +101,26 @@
               </div>
         </section>
 
-        <section class="container d-flex justify-content-between align-items-center my-5">
+        <section class= "frase d-flex justify-content-between align-items-center my-5">
 
-           <div> 
-             <h2 class="textend">¿Quieres conocer el impacto de conectar mejor con tus clientes?</h2>
-             </div>
-             <button href="#servicios" class="ens">Explora nuestros servicios</button>
-             </div> 
-
-        </section>
+            <div class="tab"> 
+                 <p class="textend">¿Quieres conocer el impacto de <br>conectar mejor con tus clientes?</p>
+              </div>
+              <div class="bat"> 
+                 <button href="/servicios.html" class="ens">Explora nuestros servicios</button>
+              </div> 
+ 
+         </section>
 
         <footer>
             <div class="d-flex justify-content-between - d-flex left">
                 <div>
-                    <a href="#" class="text-black me-3"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-black me-3"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="text-black me-3"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="text-black me-3"><i class="fab fa-tiktok"></i></a>
+                    <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" class="text-white me-3"><i class="fab fa-tiktok"></i></a>
                 </div>
-                <a href="terminos.html" class="text-black">Términos y Políticas</a>
+                <a href="terminos.html" class="text-white">Términos y Políticas</a>
             </div>
         </footer>
 
