--- a/nosotros.html
+++ b/nosotros.html
@@ -4,28 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Servicios</title>
+    <title>Página de Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
     <header class="container d-flex justify-content-between align-items-center py-3">
         <div class="logo">
-            <img src="/img/logo.png" alt="Logo" width="150">
+            <img src="img/logo.png" alt="Logo" width="150">
         </div>
+
+         <!--menu============================-->
 
         <nav class="menu">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/servicios.html">Servicios</a></li>
-                <li><a href="/nosotros.html">Nosotros</a></li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+
             </ul>
         </nav>
 
     </header>
+
+   
+    <!-- Banner -->
+    <section class="banner">
+        <img src="./img/nosotros.jpg" alt="Imagen de Banner">
+    </section>
+
+    <!-- Texto de nosotros -->
+    <section class="about-text">
+        <h2>Sobre LANDEV</h2>
+        <p>En Landev, somos una agencia innovadora de consultoría en diseño y marketing digital.
+            Nos apasiona ayudar a las marcas a crecer, destacarse y conectar con su audiencia de manera auténtica.
+            Nuestro equipo joven y dinámico está comprometido a ofrecer soluciones creativas y estratégicas
+            que transforman ideas en resultados reales. En Landev, combinamos diseño de vanguardia con estrategias
+            de marketing de alto impacto para llevar tu negocio al siguiente nivel.</p>
+    </section>
+
+    <!-- Sección de Tarjetas -->
+    <section class="cards">
+        <div class="card">
+            <img src="./img/tarjeta1.jpg" alt="Tarjeta 1">
+            <h3>Consultoría de Diseño</h3>
+            <p>Sabemos que un buen diseño es la clave para una experiencia de usuario inolvidable.
+                Nuestra consultoría de diseño se enfoca en crear soluciones visuales que no solo se ven bien,
+                sino que también funcionan de manera eficiente. Sabemos que estas buscando una identidad visual
+                única y una interfaz web intuitiva, para esto trabajamos contigo para que tu marca se destaque
+                en el mercado de forma auténtica y profesional.               
+                </p>
+        </div>
+        <div class="card">
+            <img src="./img/tarjeta2.jpg" alt="Tarjeta 2">
+            <h3>Marketing Digital</h3>
+            <p>El mundo digital está en constante cambio, y en Landev, nos aseguramos de que tu marca esté
+                siempre un paso adelante. Nuestras estrategias de marketing digital están diseñadas para conectar
+                tu negocio con las personas adecuadas, en el momento adecuado. Desde campañas en redes sociales
+                hasta SEO y publicidad digital, optimizamos tu presencia en línea para generar resultados medibles
+                y duraderos. ¡Juntos haremos crecer tu negocio de manera exponencial!</p>
+        </div>
+    </section>
+
+</body>
+</html>
