Inicio con correccion en espacios blancos y banner proyectos

--- a/index.html
+++ b/index.html
@@ -78,30 +78,27 @@
                 </div>
         </section>
 
-        <section class="container text-center my-5">
-            <h2 class="title">Proyectos</h2>
-
-            <div class="carousel-container">
-                <button class="arrow left-arrow" onclick="moveSlide(-1)">&#10094;</button>
-                <div class="carousel">
-                  <div class="slides">
-                    <!-- Aquí agregamos tus 8 fotos -->
-                    <img src="img/pag1.png" alt="Foto 1">
-                    <img src="img/pag2.png" alt="Foto 2">
-                    <img src="img/pag3.png" alt="Foto 3">
-                    <img src="img/pag4.png" alt="Foto 4">
-                    <img src="img/pag5.png" alt="Foto 5">
-                    <img src="img/pag6.png" alt="Foto 6">
-                    <img src="img/pag7.png" alt="Foto 7">
-                    <img src="img/pag8.png" alt="Foto 8">
-                  </div>
-                </div>
+        <section class="carousel-container">
+            <button class="arrow left-arrow" onclick="moveSlide(-1)">&#10094;</button>
             
-                <button class="arrow right-arrow" onclick="moveSlide(1)">&#10095;</button>
+            <div class="carousel">
+              <div class="slides">
+                <!-- Aquí agregamos tus 8 fotos -->
+                <img src="img/pag1.png" alt="Foto 1">
+                <img src="img/pag2.png" alt="Foto 2">
+                <img src="img/pag3.png" alt="Foto 3">
+                <img src="img/pag4.png" alt="Foto 4">
+                <img src="img/pag5.png" alt="Foto 5">
+                <img src="img/pag6.png" alt="Foto 6">
+                <img src="img/pag7.png" alt="Foto 7">
+                <img src="img/pag8.png" alt="Foto 8">
               </div>
+            </div>
+        
+            <button class="arrow right-arrow" onclick="moveSlide(1)">&#10095;</button>
         </section>
 
-        <section class= "frase d-flex justify-content-between align-items-center my-5">
+        <section class= "frase d-flex justify-content-between align-items-center">
 
             <div class="tab"> 
                  <p class="textend">¿Quieres conocer el impacto de <br>conectar mejor con tus clientes?</p>
