--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="container d-flex justify-content-between align-items-center py-3">
         <div class="logo">
-            <img src="img/logo.png" alt="Logo" width="150">
+            <img src="img/logo.png" alt="Logo">
         </div>
 
          <!--menu============================-->
@@ -117,7 +117,7 @@
 
         <footer>
             <div class="d-flex justify-content-between left">
-                <div class="d-flex justify-content-between - d-flex left">
+                <div class="iconos d-flex justify-content-between - d-flex left">
                     <div>
                         <a href="https://www.instagram.com/tuusuario" class="text-white me-3"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/tuusuario" class="text-white me-3"><i class="fab fa-facebook"></i></a>
