--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,7 @@
 <body>
     <header class="container d-flex justify-content-between align-items-center py-3">
         <div class="logo">
-            <img src="img/logo.png" alt="Logo" width="150">
+            <img src="img/logo.png" alt="Logo">
         </div>
 
          <!--menu============================-->
@@ -72,6 +72,20 @@
                 y duraderos. ¡Juntos haremos crecer tu negocio de manera exponencial!</p>
         </div>
     </section>
+
+    <footer>
+        <div class="d-flex justify-content-between left">
+            <div class="iconos d-flex justify-content-between - d-flex left">
+                <div>
+                    <a href="https://www.instagram.com/tuusuario" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/tuusuario" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/tuusuario" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.tiktok.com/@tuusuario" class="text-white me-3"><i class="fab fa-tiktok"></i></a>
+                </div>
+        </div>            
+            <a href="terminos.html" class="text-white">Términos y Políticas</a>
+        </div>
+    </footer>
 
 </body>
 </html>
