--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 
+    
+    <link rel="icon" href="img/favicon.png.png" type="image/png">
+    
+
 </head>
+
+
 
 <body>
     <header class="container d-flex justify-content-between align-items-center py-3">
