--- a/servicios.html
+++ b/servicios.html
@@ -12,6 +12,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 
+    <link rel="icon" href="img/favicon.png.png" type="image/png">
+
 </head>
 
 <body>
