--- a/terminos.html
+++ b/terminos.html
@@ -11,6 +11,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="icon" href="img/favicon.png.png" type="image/png">
+
 </head>
 
 <body>
